<resources>
    <string name="app_name">Vertretungsplan</string>
    <string name="settings">Settings</string>
    <string name="action_reload_web_view">Reload</string>
    <string name="loading">Load…</string>
    <string name="loading_widget">Load widget…</string>
    <string name="enter_userdata">Please enter credentials</string>
    <string name="correct_userdata">Wrong credentials! Please enter credentials</string>
    <string name="wrong_userdata">Wrong credentials</string>
    <string name="userdata">Credentials</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_change_for">No change for</string>
    <string name="new_version">New version</string>
    <string name="error_could_not_load">Cannot load</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_download_error">Error while downloading</string>
    <string name="showing_offline">Show offline</string>
    <plurals name="plural_day">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="plural_hour">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="plural_minute">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="plural_second">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="pref_no_change_since_max_precision">Time span</string>
    <string name="pref_no_change_since_max_precision_summary_none">No values are displayed</string>
    <plurals name="pref_no_change_since_max_precision_summary">
        <item quantity="one">Up to %d time value is displayed as status text</item>
        <item quantity="other">Up to %d time values are displayed as status text</item>
    </plurals>
    <string name="pref_user_interface">User interface</string>
    <string name="no_change">No change</string>
    <string name="title_activity_formatted">Vertretungsplan</string>
    <string name="original_activity">Webplan</string>
    <string name="action_mark_read">Mark as read</string>
    <string name="pref_colors">Colors</string>
    <string name="pref_auto_mark_read">Automatically mark read</string>
    <string name="pref_normal_text">Normal</string>
    <string name="pref_header_text">Header</string>
    <string name="pref_class_text">Class</string>
    <string name="pref_text_color">Text color</string>
    <string name="pref_background_color">Background color</string>
    <string name="pref_text_color_highlight">Highlight text color</string>
    <string name="pref_background_color_highlight">Highlight background color</string>
    <string name="pref_widget_text_color_highlight_new">New text color</string>
    <string name="pref_widget_text_color_highlight_new_relevant">New relevant text color</string>
    <string name="pref_widget_text_color_highlight_new_general">New general text color</string>
    <string name="pref_color_black">Black</string>
    <string name="pref_color_blue">Blue</string>
    <string name="pref_color_cyan">Cyan</string>
    <string name="pref_color_dkgray">Dark gray</string>
    <string name="pref_color_black_value" translatable="false">-16777216</string>
    <string name="pref_color_blue_value" translatable="false">-16776961</string>
    <string name="pref_color_dkgray_value" translatable="false">-12303292</string>
    <string name="pref_color_gray_value" translatable="false">-7829368</string>
    <string name="pref_color_red_value" translatable="false">-65536</string>
    <string name="pref_color_white_value" translatable="false">-1</string>
    <string name="pref_widget">Widget</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_light_value" translatable="false">light</string>
    <string name="pref_notification">Notifications</string>
    <string name="pref_notification_enabled">Enable notifications</string>
    <string name="pref_notification_enabled_summary">Show a notification if a new plan is available</string>
    <string name="pref_notification_sound_enabled">Enable notification sound</string>
    <string name="pref_notification_sound">Choose notification sound</string>
    <string name="pref_led_notification_enabled">Enable LED</string>
    <string name="pref_led_notification_color">LED color</string>
    <string name="pref_vibrate_notification_enabled">Enable vibration</string>
    <string name="action_about">About</string>
    <string name="action_reset">Reset</string>
    <string name="pref_lesson_plan">Lesson plan</string>
    <string name="pref_lesson_plan_auto_select_day">Auto-select day</string>
    <string name="pref_lesson_plan_auto_select_day_summary">Automatically show current day when opening the lesson plan</string>
    <string name="pref_formatted_plan_auto_select_day">Auto-select day</string>
    <string name="pref_formatted_plan_auto_select_day_summary">Automatically show current day when opening the formatted plan</string>
    <string name="pref_formatted_plan_auto_select_day_time">Time for selecting tomorrow</string>
    <string name="pref_lesson_plan_auto_select_day_time">Time for selecting tomorrow</string>
    <string name="pref_formatted_plan_replace_teacher_short_with_teacher_full">Show teacher names</string>
    <string name="pref_formatted_plan_replace_teacher_short_with_teacher_full_summary">Show the full teacher name instead of the teacher abbr. if it\'s available from the lesson plan</string>
    <string name="pref_action_bar">Action bar</string>
    <string name="pref_action_bar_summary">Colors of the action bar while showing formatted plan</string>
    <string name="pref_show_filtered_plan_as_action">Filter plan as action</string>
    <string name="pref_show_filtered_plan_as_action_summary">Show option to filter plan directly in the action bar (only if lesson plan is used)</string>
    <string name="pref_hide_action_reload">Hide reload action</string>
    <string name="pref_hide_action_reload_summary">You can still reload the plan by swiping down (setting only applies for the default activity of this app)</string>
    <string name="pref_notification_only_if_relevant">Only if relevant</string>
    <string name="pref_notification_only_if_relevant_summary">Only notify if relevant information is found based on your lesson plan</string>
    <string name="pref_notification_general_not_relevant">Ignore general information</string>
    <string name="pref_notification_general_not_relevant_summary">Don\'t count general information as relevant</string>
    <string name="pref_filter_general">Filter general</string>
    <string name="pref_filter_general_summary">When filtering the plan, hide general information</string>
    <string name="pref_hide_text_view">Hide status information</string>
    <string name="pref_hide_text_view_summary">Hide the text below the action bar that shows some status information</string>
    <string name="pref_notification_appearance">Appearance</string>
    <string name="pref_notification_rules">Rules</string>
    <string name="pref_user_interface_elements">Shown elements</string>
    <string name="pref_user_interface_behaviour">Behaviour</string>
    <string name="pref_formatted_colors">Formatted plan</string>
    <string name="pref_formatted_colors_summary">Colors used in the formatted display</string>
    <string name="pref_show_mark_read_as_action">Mark read as action</string>
    <string name="pref_show_mark_read_as_action_summary">Show option to mark plan as read directly in the action bar</string>
    <string name="action_lesson_class">Class</string>
    <string name="pref_lesson_plan_add_launcher_shortcut">Add launcher shortcut</string>
    <string name="pref_lesson_plan_add_launcher_shortcut_summary">Try to add a lesson plan shortcut to your launcher (might not work on some launchers)</string>
    <string name="action_show_time">Show time</string>
    <string name="action_show_full_time">Full time</string>
    <string name="pref_lesson_plan_color_time">Time</string>
    <string name="pref_lesson_plan_color_lesson">Lesson</string>
    <string name="pref_lesson_plan_color_free_time">Free time</string>
    <string name="pref_lesson_plan_color_room">Room</string>
    <string name="pref_widget_last_update">Last update</string>
    <string name="pref_widget_last_update_show_seconds">Show seconds</string>
    <string name="pref_widget_last_update_relevant">Relevant</string>
    <string name="pref_widget_last_update_relevant_summary">Show update time if new relevant information is available</string>
    <string name="pref_widget_last_update_general">General</string>
    <string name="pref_widget_last_update_general_summary">Show update time if new general information is available</string>
    <string name="pref_widget_last_update_irrelevant">Irrelevant</string>
    <string name="pref_widget_last_update_irrelevant_summary">Show update time if new irrelevant information is available</string>
    <string name="pref_widget_last_update_none">None</string>
    <string name="pref_widget_last_update_none_summary">Show update time if no new information is available</string>
    <string name="pref_content">Content</string>
    <string name="pref_notification_preview_relevant_color">Relevant text color</string>
    <string name="pref_notification_preview_general_color">General text color</string>
    <string name="pref_notification_preview_irrelevant_color">Irrelevant text color</string>
    <string name="pref_text_style_normal_value" translatable="false">normal</string>
    <string name="pref_text_style_bold_value" translatable="false">bold</string>
    <string name="pref_text_style_italic_value" translatable="false">italic</string>
    <string name="pref_notification_preview_relevant_style">Relevant text style</string>
    <string name="pref_notification_preview_general_style">General text style</string>
    <string name="pref_notification_preview_irrelevant_style">Irrelevant text style</string>
    <string name="pref_notification_button_mark_seen">Action \"mark seen\"</string>
    <string name="pref_notification_button_mark_seen_if_max_5_value" translatable="false">max5</string>
    <string name="pref_formatted_plan_show_teacher_full_and_short">Teacher abbr. in brackets</string>
    <string name="pref_formatted_plan_show_teacher_full_and_short_summary">Amend the teacher abbr. in brackets after the full teacher name</string>
    <string name="pref_teacher_short_relevancy_ignore_case">Ignore case</string>
    <string name="pref_teacher_short_relevancy_ignore_case_summary">Ignore case of teacher abbr. when checking for relevancy of information</string>
    <string name="pref_web_plan_use_custom_style">Use custom style</string>
    <string name="pref_web_plan_use_custom_style_summary">Don\'t download the CSS, but use the one below instead</string>
    <string name="pref_web_plan_custom_style">Custom style</string>
    <string name="pref_web_plan_custom_style_summary">Customize the appearance of the web plan!</string>
    <string name="pref_web_plan_custom_style_preset">Load a preset CSS</string>
    <string name="pref_web_plan_custom_style_preset_summary">If you send me a good CSS, I might include it here</string>
    <string name="pref_web_plan_add_launcher_shortcut">Add launcher shortcut</string>
    <string name="pref_web_plan_add_launcher_shortcut_summary">Try to add a webplan shortcut to your launcher (might not work on some launchers)</string>
    <string name="pref_lesson_plan_color_relevant_information">Relevant information</string>
    <string name="pref_lesson_plan_color_general_information">General information</string>
    <string name="pref_widget_opens_activity">Click opens activity</string>
    <string name="pref_lesson_plan_bg_color_current_lesson">Current lesson background</string>
</resources>