<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2015-2016 SpiritCroc
    Email: spiritcroc@gmail.com

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_user_interface">
    <PreferenceCategory
        android:title="@string/pref_user_interface_elements">
        <CheckBoxPreference
            android:key="pref_hide_action_reload"
            android:title="@string/pref_hide_action_reload"
            android:summary="@string/pref_hide_action_reload_summary"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_hide_text_view"
            android:title="@string/pref_hide_text_view"
            android:summary="@string/pref_hide_text_view_summary"
            android:defaultValue="false"
            android:disableDependentsState="true"/>
        <EditTextPreference
            android:key="pref_no_change_since_max_precision"
            android:title="@string/pref_no_change_since_max_precision"
            android:numeric="integer"
            android:defaultValue="2"
            android:dependency="pref_hide_text_view"/>
        <CheckBoxPreference
            android:key="pref_show_mark_read_as_action"
            android:title="@string/pref_show_mark_read_as_action"
            android:summary="@string/pref_show_mark_read_as_action_summary"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_show_filtered_plan_as_action"
            android:title="@string/pref_show_filtered_plan_as_action"
            android:summary="@string/pref_show_filtered_plan_as_action_summary"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_formatted_plan_replace_teacher_short_with_teacher_full"
            android:title="@string/pref_formatted_plan_replace_teacher_short_with_teacher_full"
            android:summary="@string/pref_formatted_plan_replace_teacher_short_with_teacher_full_summary"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_formatted_plan_show_teacher_full_and_short"
            android:title="@string/pref_formatted_plan_show_teacher_full_and_short"
            android:summary="@string/pref_formatted_plan_show_teacher_full_and_short_summary"
            android:dependency="pref_formatted_plan_replace_teacher_short_with_teacher_full"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_user_interface_behaviour">
        <CheckBoxPreference
            android:key="pref_formatted_plan_auto_select_day"
            android:title="@string/pref_formatted_plan_auto_select_day"
            android:summary="@string/pref_formatted_plan_auto_select_day_summary"
            android:defaultValue="true"/>
        <EditTextPreference
            android:key="pref_formatted_plan_auto_select_day_time"
            android:title="@string/pref_formatted_plan_auto_select_day_time"
            android:numeric="integer"
            android:defaultValue="17"
            android:dependency="pref_formatted_plan_auto_select_day"/>
        <CheckBoxPreference
            android:key="pref_filter_general"
            android:title="@string/pref_filter_general"
            android:summary="@string/pref_filter_general_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_colors">
        <ListPreference
            android:key="pref_theme"
            android:title="@string/pref_theme"
            android:entries="@array/pref_theme_array"
            android:entryValues="@array/pref_theme_array_values"
            android:defaultValue="@string/pref_theme_light_value"/>
        <PreferenceScreen
            android:title="@string/pref_formatted_colors"
            android:summary="@string/pref_formatted_colors_summary"
            android:fragment="de.spiritcroc.akg_vertretungsplan.settings.SettingsFormattedColorsFragment"/>
        <PreferenceScreen
            android:title="@string/pref_action_bar"
            android:summary="@string/pref_action_bar_summary"
            android:fragment="de.spiritcroc.akg_vertretungsplan.settings.SettingsActionBarFragment"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/original_activity">
        <CheckBoxPreference
            android:key="pref_web_plan_use_custom_style"
            android:title="@string/pref_web_plan_use_custom_style"
            android:summary="@string/pref_web_plan_use_custom_style_summary"
            android:defaultValue="false"/>
        <ListPreference
            android:key="pref_web_plan_custom_style_preset"
            android:title="@string/pref_web_plan_custom_style_preset"
            android:summary="@string/pref_web_plan_custom_style_preset_summary"
            android:entries="@array/pref_web_plan_custom_style_presets_names"
            android:entryValues="@array/pref_web_plan_custom_style_presets"
            android:dependency="pref_web_plan_use_custom_style"/>
        <EditTextPreference
            android:key="pref_web_plan_custom_style"
            android:title="@string/pref_web_plan_custom_style"
            android:summary="@string/pref_web_plan_custom_style_summary"
            android:dependency="pref_web_plan_use_custom_style"
            android:defaultValue="@string/web_plan_default_custom_style"/>
        <Preference
            android:key="pref_web_plan_add_launcher_shortcut"
            android:title="@string/pref_web_plan_add_launcher_shortcut"
            android:summary="@string/pref_web_plan_add_launcher_shortcut_summary"/>
    </PreferenceCategory>
</PreferenceScreen>
